@@ -1,3 +1,11 @@
+2014-01-25  Walter Lee  <walt@tilera.com>
+
+	Backport from mainline
+	2014-01-25  Walter Lee  <walt@tilera.com>
+
+	* config/tilegx/tilegx.c (tilegx_expand_to_rtl_hook): New.
+	(TARGET_EXPAND_TO_RTL_HOOK): Define.
+
 2014-01-24  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline
